<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.collect.CollectFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <TextView
            android:id="@+id/tv_sample_filename"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center"
            android:textSize="30sp" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <EditText
                android:id="@+id/filename_prefix"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:ems="10"
                android:hint="@string/file_prefix_hint"
                android:inputType="text"
                android:singleLine="true"
                android:text="@string/default_prefix_filename" />

            <Button
                android:id="@+id/update_filename"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="@color/colorPrimary"
                android:text="@string/set_filename"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/status_collect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/collect_stopped"
                android:textSize="20sp" />

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:background="@color/colorPrimary"
                android:text="@string/start_collect"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <Space
                android:layout_width="10dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="@color/colorAccent"
                android:text="@string/end_collect"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

        </TableRow>

        <TextView
            android:id="@+id/tv_sample_rate"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_horizontal"
            android:textSize="24sp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@drawable/border"
            android:padding="10dp"
            android:scrollbars="vertical">

            <TextView
                android:id="@+id/log_filename"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="false"
                android:textSize="18sp" />
        </ScrollView>


    </LinearLayout>
</android.support.constraint.ConstraintLayout>