<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.testboard.TestBoardFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">


        <TextView
            android:id="@+id/tv_testing_username"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center"
            android:text="@string/default_username"
            android:textSize="30sp" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_username"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:ems="10"
                android:hint="@string/username_hint"
                android:inputType="text"
                android:singleLine="true"
                android:text="@string/default_username" />

            <Button
                android:id="@+id/update_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:background="@color/colorPrimary"
                android:text="@string/set_username"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

        </TableRow>

        <TextView
            android:id="@+id/tv_valid"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:gravity="center"
            android:text="@string/wait_auth"
            android:textSize="30sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="2dp" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/status_collect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/tesing_stopped"
                android:textSize="20sp" />

            <Space
                android:layout_width="30dp"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_sample_rate2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textSize="20sp" />

            <Space
                android:layout_width="30dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/start2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:background="@color/colorPrimary"
                android:text="@string/start_tesing"
                android:textColor="#FFFFFF"
                android:textStyle="bold" />

            <!--            <Space-->
            <!--                android:layout_width="10dp"-->
            <!--                android:layout_height="wrap_content" />-->

            <!--            <Button-->
            <!--                android:id="@+id/end"-->
            <!--                android:layout_width="wrap_content"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_gravity="end"-->
            <!--                android:background="@color/colorAccent"-->
            <!--                android:text="@string/end_collect"-->
            <!--                android:textColor="#FFFFFF"-->
            <!--                android:textStyle="bold" />-->

        </TableRow>


    </LinearLayout>
</android.support.constraint.ConstraintLayout>